CMAKE_MINIMUM_REQUIRED(VERSION 3.7)
PROJECT(Trayce)

SET(CMAKE_CXX_STANDARD 14)

ENABLE_TESTING()

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

ADD_SUBDIRECTORY(3rdParty)

ADD_SUBDIRECTORY(TrayceCore)
ADD_SUBDIRECTORY(TrayceComm)

ADD_SUBDIRECTORY(TrayceClient)
ADD_SUBDIRECTORY(TrayceServer)

